--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/yaml": "^5.4",
         "symfony/cache": "^5.4",
         "vlucas/phpdotenv": "^5.5",
-        "league/plates": "^3.5"
+        "league/plates": "^3.5",
+        "bramus/router": "~1.6"
     }
 }
